# rtr-simulator

./: .env.example  .gitignore  Dockerfile  README.md  XRAY-REPORT.md  docker-compose.yml  export_simulation.py  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  run_gate2.py  run_simulation.py  server.js  sim_server.py  vite.config.js
backend/drone_graph/: graph_service.py  predict_service.py  report_service.py  requirements.txt  server.py
core/: __init__.py
core/physics/: __init__.py  config.py  types.py
core/physics/association/: __init__.py  base.py  pipeline.py
public/: sim_data.json
reports/: RTR-M18-Gate2-Report.docx
src/: DroneVerse.jsx  MapView.jsx  Module18TacticalUI.jsx  SimulationView.jsx  index.css  main.jsx
src/droneverse/: EmergenceDetector.js  ErrorBoundary.jsx  FlightDynamics.js  FlightDynamics.test.js  KnowledgeGraph.js  KnowledgeGraph.test.js  MissionPhaseEngine.js  MissionPhaseEngine.test.js  RadarPPI.jsx  SwarmController.js  SwarmController.test.js  Viewport3D.jsx  api.js  constants.js  missions.js
tests/physics/: conftest.py  test_adaptive_cone.py  test_association.py  test_cone_guidance.py  test_cone_landmark.py  test_config.py  test_consistency.py  test_containment.py  test_dynamics.py  test_dynamics_stub.py  test_ekf.py  test_estimator_stub.py  test_hardened.py  test_integration.py  test_landmark.py  test_lateral_budget.py  test_monte_carlo.py  test_pn_guidance.py  test_quaternion.py  test_report.py  test_sensors.py  test_sensors_stub.py  test_terrain.py  test_trajectory.py  test_types.py  test_wind.py
(+37 files in other folders)
